# yfpy

./: .dockerignore  .env.template  .gitignore  .travis.yml  .venv  DEPLOYMENT.md  MANIFEST.in  Makefile  README.md  VERSION  VERSION.py  VERSION_PYTHON.py  __init__.py  compose.build.yaml  compose.dev.yaml  compose.yaml  dao.py  dev-requirements.txt  gitignore  mkdocs.yml  pyproject.toml  query.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  util.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: python-package.yml
auth/: EXAMPLE.env
data/pitcherlist/: hitters.csv  output.csv  preseason_list.csv
docker/: Dockerfile  docker-entrypoint.sh
docs/: .buildinfo  404.html  extra.css  genindex.html  index.html  objects.inv  py-modindex.html  readme_link.html  search.html  searchindex.js  sitemap.xml  yfpy-quickstart.html  yfpy-test.html  yfpy.html
docs-mkdocs/: data.md  exceptions.md  index.md  logger.md  models.md  query.md  quickstart.md  test.md  tests.md  utils.md
docs-sphinx/: Makefile
docs-sphinx/scripts/: update_docs_for_github_pages.py
docs-sphinx/source/: conf.py  index.rst  yfpy-test.rst
docs/_autosummary/: integration.conftest.auth_dir.html  integration.conftest.browser_callback.html  integration.conftest.chosen_date.html  integration.conftest.chosen_week.html  integration.conftest.data_dir.html  integration.conftest.game_code.html  integration.conftest.game_id.html  integration.conftest.game_key.html  integration.conftest.html  integration.conftest.league_id.html  integration.conftest.league_player_limit.html  integration.conftest.player_id.html  integration.conftest.player_key.html  integration.conftest.season.html  integration.conftest.team_id.html  integration.conftest.team_name.html  integration.conftest.yahoo_data.html  integration.conftest.yahoo_query.html  integration.html  integration.test_api_game_data.html  integration.test_api_game_data.test_get_all_yahoo_fantasy_game_keys.html  integration.test_api_game_data.test_get_current_game_info.html  integration.test_api_game_data.test_get_current_game_metadata.html  integration.test_api_game_data.test_get_game_info_by_game_id.html  integration.test_api_game_data.test_get_game_key_by_season.html  integration.test_api_game_data.test_get_game_metadata_by_game_id.html  integration.test_api_game_data.test_get_game_position_types_by_game_id.html  integration.test_api_game_data.test_get_game_roster_positions_by_game_id.html  integration.test_api_game_data.test_get_game_stat_categories_by_game_id.html  integration.test_api_game_data.test_get_game_weeks_by_game_id.html  integration.test_api_game_data.test_get_league_key.html  integration.test_api_league_data.html  integration.test_api_league_data.test_get_league_draft_results.html  integration.test_api_league_data.test_get_league_info.html  integration.test_api_league_data.test_get_league_matchups_by_week.html  (+188 more)
docs/_modules/: index.html
docs/_static/: custom.css  (+3 more)
examples/: examples.py
node-output/: swagger.yaml
quickstart/: quickstart.py
scripts/: Hitters.py  RP.py  SP.py  eno_scraper.py  get_free_agents.py  pl_scraper.py  pre_build.py  quickstart.py  razz_scraper.py  run.py  scratch.py  ss_scraper.py  test_query.py  yahoo_driver.py
test/: EXAMPLE.env  conftest.py  test.py  test_yfpy.py
yffpy/: __init__.py  data.py  models.py  query.py  utils.py
yfpy/: __init__.py  data.py  exceptions.py  logger.py  models.py  query.py  utils.py
(+288 files in other folders)
