[metadata]
description_file = README.md

[flake8]
ignore =
    # 1 blank line required before class docstring
    D203,
    # line break occurred before a binary operator
    W503
per-file-ignores =
    # imported but unused
    __init__.py: F401
    data.py: F401
    # add to PYTHONPATH before imports
    quickstart.py: E402
exclude =
    __pycache__,
    .git,
    .github,
    .idea,
    .pytest_cache,
    build,
    dist,
    yfpy.egg-info,
    test/test_output
max-complexity = 15
max-line-length = 120

[tool:pytest]
markers =
    unit: tests that are self-contained without any external interactions,
    integration: tests that require interaction with external components (such as an API)
